# tod_operator_interface

./: README.md
tod_input_devices/: README.md
tod_input_devices/config/: fanatec.yaml
tod_input_devices/launch/: tod_input_devices.launch
tod_input_devices/src/: CMakeLists.txt  InputDeviceController.cpp  InputDeviceController.h
tod_input_devices/src/USBDevice/: Correction.h
tod_manager/: CMakeLists.txt  README.md  package.xml
tod_manager/doc/: state_machine.txt
tod_manager/launch/: tod_manager.launch
tod_manager/src/common/: IpAddressDeserializer.h  QtWidgetGroup.cpp  QtWidgetGroup.h
tod_manager/src/operator/: CMakeLists.txt  OperatorManagerNode.cpp  OperatorManagerWidget.cpp  OperatorManagerWidget.h
tod_manager/src/operator/ui/: operatorWidget.ui
tod_manager/test/: TestTodManagerNode.cpp
tod_visual/: CMakeLists.txt  README.md  package.xml
tod_visual/launch/: demo.launch  tod_visual.launch
tod_visual/resources/OpenGL/shaders/: grid.vert  shaderTransparent.frag
tod_visual/src/: Interface.cpp  Interface.h
tod_visual/src/TodStandardEntities/: CMakeLists.txt
tod_visual/src/TodStandardEntities/src/: BaseFootprint.cpp  BaseFootprint.h  Camera.cpp  Camera.h  CoordinateSystem.cpp  CoordinateSystem.h  Grid.cpp  LaserScan.cpp  LaserScan.h  MeshEntity.cpp  MeshEntity.h  MouseClickList.cpp  MouseClickList.h  MouseClickedArea.cpp  MouseClickedArea.h  Path.cpp  Path.h  TopView.cpp  Video.cpp  Video.h
tod_visual/src/tofGL/: CMakeLists.txt
tod_visual/src/tofGL/Core/: RosInterface.cpp  RosInterface.h
tod_visual/yaml/: tum-q7.yaml
(+6 files in other folders)
